--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,15 @@
-*{
+/* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+    background-color: #fcfbfb;
+}*/
 
+/*body {
+    background-color: #fcfbfb;
+}*/
 
-
-header {
-    background-color: #134573;
-    color: #eee;
+/*header {
     display: flex;
     position: absolute;
     font-size: large;
@@ -18,19 +19,12 @@ header {
     padding-top: 0;
     width: 100%;
 
-}
+}*/
 
 h1 {
     font-family: 'Inter', sans-serif;
 }
 
-/*.fondoTo {
-    position: absolute;
-    width: 100%;
-    background-image: url(img/totoro.jpeg);
-    background-size:contain;
-    background-repeat: no-repeat;
-}*/
 
 .conteiner {
     width: 100%;
@@ -38,40 +32,41 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #eee;
+    background-color: #fcfbfb;
     padding: 0 1.5rem;
-    scroll-behavior: smooth;
-    
+    /*scroll-behavior: smooth;*/
+
 }
 
 /*.infoFilms{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #eee;
-    padding: 0 1.5rem;
-}*/
-
-.cajaFilms{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #eee;
+    background-color:#fcfbfb;
     padding: 0 1.5rem;
+}*/
+
+.cajaFilms {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fcfbfb;
+    padding: 0 1.0rem;
     scroll-behavior: smooth;
 }
 
 .carta {
-    padding: 30px;
-    margin: 50px;
+    padding: 0 1.0rem;
+    margin: 2rem;
     width: 100%;
     max-width: 80rem;
-    padding: 20px;
-    background-color: #fff;
+    padding: 30px;
+    background-color: #fcfbfb;
+    color: grey;
     box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, .2);
     display: flex;
     align-items: center;
@@ -81,50 +76,63 @@ h1 {
 
 
 img {
-    padding: 20px;
+    padding: 1rem;
     min-width: 20rem;
     max-width: 20rem;
     height: 25rem;
-    /*transform: translateX(-8rem);*/
-    position: relative;
     border-radius: 2rem;
+    
 }
 
-.img img{
+/*img:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
     border-radius: 2rem;
     box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #fff;
-}
+    cursor: pointer;
+}*/
 
+/*texto del contenido*/
 .cajatext {
+    font-family: 'La Belle Aurore', cursive;
     padding: 20px;
     margin-bottom: 3rem;
     font-size: 1.4rem;
-    color: rgba(0, 0, 0, .7);
+    color: #69696c;
 }
+
+/*letra año*/
 .text {
     font-size: 2.5rem;
     margin: 1rem 0 1rem;
     padding: 20px;
     text-transform: uppercase;
-    color: #4facfe;
-}
-    
-.nameMovie{
-    padding: 20px;
+    color: #456786;
 }
 
+/*nombre de la peli*/
+.nameMovie {
+    padding: 2rem;
+    padding-top: 70px;
+    margin-bottom: 10px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color: #69696c;
+}
+
+/*director*/
 .text1 {
     padding: 20px;
+    font-family: 'Inter', sans-serif;
     display: block;
-    color: rgba(0, 0, 0, .5);
-    font-size: 1.6rem;
+    color: #d9d9d9;
+    font-size: 1.4rem;
     font-weight: 600;
     margin: .5rem 0 1rem;
-    
+
 }
 
 /*@media screen and (max-width: 1068px){
