--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,10 @@
 
 }*/
 
+/* HEADER */
 .banner{
     width: 100%;
-    height: 170px;
+    height: 150px;
     display: block;
     background-color: #134573;
 }
@@ -37,6 +38,7 @@
 
 
 }
+/* AQUI TERMINA EL HEADER */
 
 h1 {
     font-family: 'Inter', sans-serif;
@@ -145,6 +147,15 @@ img {
     margin: .5rem 0 1rem;
     
 }
+
+/* FOOTER */
+.footer{
+    width: 100%;
+    height: 150px;
+    display: block;
+    background-color: #134573;
+}
+/* AQUI TERMINA EL FOOTER */
 
 /*@media screen and (max-width: 1068px){
     .cajaFilms{
