--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,8 @@
     height: 150px;
     display: block;
     background-color: #134573;
+    position: fixed;
+    z-index: 2;
 }
 
 .imgBanner{
@@ -40,9 +42,6 @@
 }
 /* AQUI TERMINA EL HEADER */
 
-h1 {
-    font-family: 'Inter', sans-serif;
-}
 
 /*.fondoTo {
     position: absolute;
@@ -63,7 +62,25 @@ h1 {
     scroll-behavior: smooth;
     
 }
+.menuBar{
+    padding: 0;
+    display: flex;
+    position: static;
+    align-items: center;
+    background-color: #d9d9d9;
+    width: 100%;
+    height: 70px;
+}
 
+.desplegables{
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    min-width: 400px;
+    display:block;
+    margin: auto;
+    justify-content: space-between;
+}
 /*.infoFilms{
     width: 100%;
     height: 100vh;
@@ -151,9 +168,12 @@ img {
 /* FOOTER */
 .footer{
     width: 100%;
-    height: 150px;
+    height: 100px;
     display: block;
     background-color: #134573;
+    position: fixed;
+    z-index: index 2;
+    bottom: 0;
 }
 /* AQUI TERMINA EL FOOTER */
 
