--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,6 @@
 }
 /* AQUI TERMINA EL HEADER */
 
-h1 {
-    font-family: 'Inter', sans-serif;
-}
 
 
 .conteiner {
@@ -47,9 +44,28 @@ h1 {
     flex-direction: column;
 
 }
-
 .menuBar{
     padding: 0;
+    display: flex;
+    position: static;
+    align-items: center;
+    background-color: #d9d9d9;
+    width: 100%;
+    height: 70px;
+}
+
+.desplegables{
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    min-width: 400px;
+    display:block;
+    margin: auto;
+    justify-content: space-between;
+}
+/*.infoFilms{
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,7 +124,7 @@ img {
     min-width: 20rem;
     max-width: 20rem;
     height: 25rem;
-    /*transform: translateX(-8rem);*/
+    transform: translateX(-8rem);
     position: relative;
     border-radius: 2rem;
 }
@@ -176,7 +192,7 @@ img {
 /* FOOTER */
 .footer{
     width: 100%;
-    height: 150px;
+    height: 100px;
     display: block;
     background-color: #134573;
     position: fixed;
