--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,7 @@
     height: 60px;
     position: fixed;
     top: 150px;
+    z-index: 2;
 }
 
 .desplegables{
@@ -114,6 +115,7 @@
     display: flex;
     align-items: center;
     border-radius: 2rem;
+    height: ;
     
 }
 
