--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,23 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-
 }
 
-/* HEADER */
+
+
+/*header {
+    background-color: #134573;
+    color: #eee;
+    display: flex;
+    position: absolute;
+    font-size: large;
+    padding: 50px;
+    justify-content: center;
+    margin-top: 0;
+    padding-top: 0;
+    width: 100%;
+
+}*/
 
 /* HEADER */
 .banner{
@@ -16,8 +29,6 @@
     position: fixed;
     z-index: 2;
     top: 0;
-    
-
 }
 
 .imgBanner{
@@ -30,11 +41,17 @@
 }
 /* AQUI TERMINA EL HEADER */
 
-
+/*.fondoTo {
+    position: absolute;
+    width: 100%;
+    background-image: url(img/totoro.jpeg);
+    background-size:contain;
+    background-repeat: no-repeat;
+}*/
 
 .conteiner {
     width: 100%;
-    height: 50%;
+    height: 100%;
     margin-top: 155px;
     margin-bottom: 100px;
     display: flex;
@@ -42,30 +59,13 @@
     justify-content: center;
     background-color: #fcfbfb;
     flex-direction: column;
+    padding: 0 1.5rem;
+    scroll-behavior: smooth;    
+   
 
 }
 .menuBar{
     padding: 0;
-    display: flex;
-    position: static;
-    align-items: center;
-    background-color: #d9d9d9;
-    width: 100%;
-    height: 70px;
-}
-
-.desplegables{
-    width: 100%;
-    height: 100%;
-    max-width: 800px;
-    min-width: 400px;
-    display:block;
-    margin: auto;
-    justify-content: space-between;
-}
-/*.infoFilms{
-    width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,10 +86,17 @@
     margin: auto;
     justify-content: space-between;
 }
+/*.infoFilms{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #eee;
+    padding: 0 1.5rem;
+}*/
 
-
-
-.cajaFilms {
+.cajaFilms{
     width: 100%;
     height: 100%;
     margin-top: 100px;
@@ -97,26 +104,22 @@
     align-items: center;
     justify-content: center;
     background-color: #fcfbfb;
-    padding: 0 1.0rem;
-    padding-top: 10%;
+    padding: 0 1.5rem;
     scroll-behavior: smooth;
-        
 }
 
 .carta {
-    padding: 0 1.0rem;
-    margin: 2rem;
-    width: 100%;
-    max-width: 80rem;
     padding: 30px;
-    background-color: #fcfbfb;
-    color: grey;
+    margin: 50px;
+    width: 100%;
+    max-width: 900px;
+    min-width: 400px;
+    padding: 20px;
+    background-color: #fff;
     box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, .2);
     display: flex;
     align-items: center;
     border-radius: 2rem;
-    height: ;
-    
 }
 
 
@@ -126,69 +129,46 @@ img {
     min-width: 20rem;
     max-width: 20rem;
     height: 25rem;
-    transform: translateX(-8rem);
+    /*transform: translateX(-8rem);*/
     position: relative;
     border-radius: 2rem;
 }
 
 .img img{
-    padding: 1rem;
-    min-width: 20rem;
-    max-width: 20rem;
-    height: 25rem;
-    border-radius: 2rem;
-    
-}
-
-/*img:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
     border-radius: 2rem;
     box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #fff;
-    cursor: pointer;
-}*/
+}
 
-/*texto del contenido*/
 .cajatext {
-    font-family: 'La Belle Aurore', cursive;
     padding: 20px;
     margin-bottom: 3rem;
     font-size: 1.4rem;
-    color: #69696c;
+    color: rgba(0, 0, 0, .7);
 }
-
-/*letra año*/
 .text {
     font-size: 2.5rem;
     margin: 1rem 0 1rem;
     padding: 20px;
     text-transform: uppercase;
-    color: #456786;
+    color: #4facfe;
+}
+    
+.nameMovie{
+    padding: 20px;
 }
 
-/*nombre de la peli*/
-.nameMovie {
-    padding: 2rem;
-    padding-top: 70px;
-    margin-bottom: 10px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 2rem;
-    color: #69696c;
-}
-
-/*director*/
 .text1 {
     padding: 20px;
-    font-family: 'Inter', sans-serif;
     display: block;
-    color: #d9d9d9;
-    font-size: 1.4rem;
+    color: rgba(0, 0, 0, .5);
+    font-size: 1.6rem;
     font-weight: 600;
     margin: .5rem 0 1rem;
-
+    
 }
 
 /* FOOTER */
