--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Jost&family=Kantumruy+Pro:wght@700&family=La+Belle+Aurore&family=Lusitana&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Inter:wght@600&family=Jost&family=Kantumruy+Pro:wght@700&family=La+Belle+Aurore&family=Lusitana&display=swap'); 
 
 * {
     margin: 0px;
@@ -68,6 +67,7 @@ body{
     max-width: 100%;
     min-width: 400px;
     font-size: 1.15rem;
+    font-family: 'Inter', sans-serif;
 }
 
 .desplegables {
@@ -78,7 +78,10 @@ body{
     display: block;
     margin: auto;
     justify-content: space-around;
+    
 }
+
+
 
 ul, ol {
     list-style: none;
@@ -89,7 +92,7 @@ ul, ol {
 
 .nav li a {
     background-color: #d9d9d9;
-    color: #fff;
+    color: #69696c;
     text-decoration: none;
     padding: 10px 15px;
     display: block;
@@ -98,6 +101,7 @@ ul, ol {
 .nav li a:hover{
     background-color:#134573;
     opacity: 90%;
+    color: #fff;
 }
 .nav > li{
     float: left;
@@ -124,7 +128,7 @@ ul, ol {
 }
 
 .menu1{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 .menu2{
     font-size: 1rem;
@@ -191,6 +195,7 @@ img {
     font-size: 0.6rem;
     color: #929298;
     transition: .3s;
+    text-align: justify;
 }
 
 .cajatext:hover {
@@ -206,7 +211,7 @@ img {
     transform: scale(1.4);
     border-radius: 3px;
     cursor: url(img/buscar.png), auto;
-    
+    text-align: justify;
 }
 
 
@@ -235,6 +240,7 @@ img {
     font-weight: 600;
     font-size: 1.2rem;
     color: #69696c;
+
 }
 
 /* P - TEXTO NOMBRE DEL DIRECTOR */
@@ -242,22 +248,36 @@ img {
     padding: 3px;
     font-family: 'Inter', sans-serif;
     display: block;
-    color: #d9d9d9;
+    color: #134573;
     font-size: 0.9rem;
     font-weight: 600;
     margin: .5rem 0 1rem;
-    
+    opacity: 60%;
 }
 
 /* FOOTER */
 .footer {
     width: 100%;
     height: 4rem;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #134573;
     position: fixed;
     z-index: index 2;
     bottom: 0;
+    padding: 0.3rem;
+    
+}
+
+#calculo {
+    background-color: #134573;
+    color: #fff;
+    font-size: 1.1rem;
+    font-family: 'Didact Gothic', sans-serif; 
+    letter-spacing: 0.5px;
+    word-spacing: 3px;
+    text-align: justify;
 }
 
 /* AQUI TERMINA EL FOOTER */
